Estructura básica de la web terminada
- Sin identificacion ni nada
- Lo importante ahora es:
-- sistema CRUD para los asesoramientos
-- sistema de creación de docs en base a los informes
-- sistema de creación de carpetas

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-30 03:04+0100\n"
+"POT-Creation-Date: 2019-12-01 19:22+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,11 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: templates/base.html:91
-msgid "Log out"
-msgstr "Cerrar Sesión"
-
-#: templates/base.html:93 templates/registration/login.html:10
+#: templates/registration/login.html:10
 msgid "Log in"
 msgstr "Identificarte"
 
@@ -40,15 +36,23 @@ msgstr "No eres miembro"
 
 #: templates/registration/login.html:15
 msgid "Register"
-msgstr ""
+msgstr "Registrar"
+
+#: udaic_blog/templates/udaic_blog/base.html:4
+msgid "UdAIC"
+msgstr "UdAIC"
+
+#: udaic_blog/templates/udaic_blog/base.html:5
+msgid "UdAIC Blog"
+msgstr "Blog de UdAIC"
 
 #: udaic_django/settings.py:122
 msgid "English"
-msgstr ""
+msgstr "Inglés"
 
 #: udaic_django/settings.py:123
 msgid "Spanish"
-msgstr ""
+msgstr "Español"
 
 #: venv/lib/python3.7/site-packages/_pytest/config/argparsing.py:393
 #, python-format
@@ -1229,3 +1233,6 @@ msgstr ""
 #: venv/lib/python3.7/site-packages/django/views/templates/default_urlconf.html:408
 msgid "Connect, get help, or contribute"
 msgstr ""
+
+#~ msgid "Log out"
+#~ msgstr "Cerrar Sesión"
